kdoc/0.1.8/kinta-lib/com.dailymotion.kinta/-kinta-env/-var/index.md
[kinta-lib](../../../index.md) / [com.dailymotion.kinta](../../index.md) / [KintaEnv](../index.md) / [Var](./index.md)

# Var

`enum class Var`

### Enum Values

| Name | Summary |
|---|---|
| [GOOGLE_PLAY_PACKAGE_NAME](-g-o-o-g-l-e_-p-l-a-y_-p-a-c-k-a-g-e_-n-a-m-e.md) |  |
| [GOOGLE_CLOUD_STORAGE_BUCKET](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-b-u-c-k-e-t.md) |  |
| [APPCENTER_ORGANIZATION](-a-p-p-c-e-n-t-e-r_-o-r-g-a-n-i-z-a-t-i-o-n.md) |  |
| [SLACK_WEBHOOK_URL](-s-l-a-c-k_-w-e-b-h-o-o-k_-u-r-l.md) |  |
| [GITLAB_PERSONAL_TOKEN](-g-i-t-l-a-b_-p-e-r-s-o-n-a-l_-t-o-k-e-n.md) |  |
| [GITHUB_TOKEN](-g-i-t-h-u-b_-t-o-k-e-n.md) |  |
| [GITHUB_USERNAME](-g-i-t-h-u-b_-u-s-e-r-n-a-m-e.md) |  |
| [APPCENTER_TOKEN](-a-p-p-c-e-n-t-e-r_-t-o-k-e-n.md) |  |
| [GITHUB_APP_CLIENT_ID](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-i-d.md) |  |
| [GITHUB_APP_CLIENT_SECRET](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-s-e-c-r-e-t.md) |  |
| [TRANSIFEX_USER](-t-r-a-n-s-i-f-e-x_-u-s-e-r.md) |  |
| [TRANSIFEX_PASSWORD](-t-r-a-n-s-i-f-e-x_-p-a-s-s-w-o-r-d.md) |  |
| [TRANSIFEX_PROJECT](-t-r-a-n-s-i-f-e-x_-p-r-o-j-e-c-t.md) |  |
| [GOOGLE_PLAY_JSON](-g-o-o-g-l-e_-p-l-a-y_-j-s-o-n.md) |  |
| [GOOGLE_CLOUD_STORAGE_JSON](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-j-s-o-n.md) |  |
| [JIRA_USERNAME](-j-i-r-a_-u-s-e-r-n-a-m-e.md) |  |
| [JIRA_PASSWORD](-j-i-r-a_-p-a-s-s-w-o-r-d.md) |  |
| [BITRISE_PERSONAL_TOKEN](-b-i-t-r-i-s-e_-p-e-r-s-o-n-a-l_-t-o-k-e-n.md) |  |
| [JIRA_URL](-j-i-r-a_-u-r-l.md) |  |
| [APPLE_PASSWORD](-a-p-p-l-e_-p-a-s-s-w-o-r-d.md) |  |
| [APPLE_USERNAME](-a-p-p-l-e_-u-s-e-r-n-a-m-e.md) |  |
| [KINTA_KEYSTORE](-k-i-n-t-a_-k-e-y-s-t-o-r-e.md) |  |
| [KINTA_KEYSTORE_PASSWORD](-k-i-n-t-a_-k-e-y-s-t-o-r-e_-p-a-s-s-w-o-r-d.md) |  |
| [KINTA_KEY_ALIAS](-k-i-n-t-a_-k-e-y_-a-l-i-a-s.md) |  |
| [KINTA_KEY_PASSWORD](-k-i-n-t-a_-k-e-y_-p-a-s-s-w-o-r-d.md) |  |
